[tool.poetry]
name = "script2scene"
version = "0.1.0"
description = ""
authors = ["Purav <puravparabdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
manimgl = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
